<resources>
    <string name="app_name">Ultras11Jul</string>
    <string name="login_screen">Login Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="account_created">Account created</string>
    <string name="login">Login</string>
    <string name="regitser_screen">Regitser Screen</string>
    <string name="login_error_message">Email or password wrong</string>
</resources>