<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_screen"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_screen_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/ic_round_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_screen_et_password"
        android:drawableStart="@drawable/ic_round_lock_24"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_shape"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:weightSum="100"
        android:layout_height="wrap_content">

        <Button
            app:backgroundTint="@null"
            android:background="@drawable/button_shape"
            android:layout_weight="50"
            android:onClick="login"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_gravity="center"
            android:text="@string/login" />

        <Button
            android:onClick="openRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="50"
            android:background="@drawable/button_shape"
            android:text="@string/register"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>

